--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,20 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+      request-read-timeout: 5000 # Timeout on waiting to read configuration data from the config server (ms)
+      request-connect-timeout: 5000 # Timeout on waiting to connect to the config server (ms)
+      fail-fast: false # Makes a failure to connect to the config server fatal
+      retry:
+        max-attempts: 6 # Maximum number of attempts
+        initial-interval: 1000 #  Initial retry interval for backoff (ms)
+        max-interval: 2000 # Maximum retry interval for backoff (ms)
+        multiplier: 1.1 # Multiplier to compute the next interval
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh # Exposes the /actuator/refresh endpoint through HTTP
 
 
 
