--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
   application:
     name: catalog-service
   datasource:
-    username: user
-    password: password
+    username: postgres
+    password: postgres
     url: jdbc:postgresql://localhost:5432/polardb_catalog #Opening and closing database connections are relatively expensive operations, so you don’t want to do that every time your application accesses data. The solution is connection pooling: the application establishes several connections with the database and reuses them, rather than creating new ones for each data access operation. This is a considerable performance optimization.
     hikari:
       connection-timeout: 2000 # The maximum time (ms) to spend waiting to get a connection from the pool
