--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,8 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+bootBuildImage {
+    imageName = "${project.name}"
+    environment = ["BP_JVM_VERSION" : "17.*"]
+}
+
