--- a/src/main/resources/sample.yml
+++ b/src/main/resources/sample.yml
@@ -16,6 +16,8 @@
 
 # https://yaml.org/
 
+# https://github.com/GoogleContainerTools/jib - Another option for packaging Java applications as container images without writing a Dockerfile is using Jib
+
 #The following is a prioritized list of some of the most common property sources, starting with the highest priority:
 #  @TestPropertySource annotations on test classes
 #  Command-line arguments
@@ -54,6 +56,8 @@
 ===============================================================================
 
 ===============================================================================
+docker network create catalog-network
 
-docker run -d --name polar-postgres -e POSTGRES_USER=user -e POSTGRES_PASSWORD=password -e POSTGRES_DB=polardb_catalog -p 5432:5432 postgres:14.4
+docker run -d --name polar-postgres --net catalog-network -e POSTGRES_USER=user -e POSTGRES_PASSWORD=password -e POSTGRES_DB=polardb_catalog -p 5432:5432 postgres:14.4
 
+docker run -d --name catalog-service --net catalog-network -p 8081:8081 -e SPRING_DATASOURCE_URL= jdbc:postgresql://polar-postgres:5432/polardb_catalog -e SPRING_PROFILES_ACTIVE=testdata catalog-service
