--- a/build.gradle
+++ b/build.gradle
@@ -52,12 +52,6 @@ dependencyManagement {
     }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
-}
-
 tasks.named('test') {
     useJUnitPlatform()
 }
@@ -65,5 +59,12 @@ tasks.named('test') {
 bootBuildImage {
     imageName = "${project.name}"
     environment = ["BP_JVM_VERSION" : "17.*"]
+    docker {
+        publishRegistry {
+            username = project.findProperty("registryUsername")
+            password = project.findProperty("registryToken")
+            url = project.findProperty("registryUrl")
+        }
+    }
 }
 
